[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprite/projectiles/poisonSeed/spike/SpikeProjetile_small_3.png" type="Texture" id=1]
[ext_resource path="res://Nodes/Widget/ItemCardSlot.gd" type="Script" id=2]
[ext_resource path="res://Themes/TB_Focused.tres" type="Texture" id=3]
[ext_resource path="res://Themes/TB_Hovered.tres" type="Texture" id=4]

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 0.94902, 0.65098, 0.368627, 1, 1, 0.894118, 0.470588, 1 )

[sub_resource type="GradientTexture2D" id=7]
gradient = SubResource( 6 )
fill_from = Vector2( 0.4875, 1 )
fill_to = Vector2( 0.454167, 0 )

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 0.921569, 0.337255, 0.294118, 1, 1, 0.419608, 0.592157, 1 )

[sub_resource type="GradientTexture2D" id=11]
gradient = SubResource( 10 )
fill_from = Vector2( 0.508333, 1 )
fill_to = Vector2( 0.525, 0 )

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0.301961, 0.65098, 1, 1, 0.294118, 0.356863, 0.670588, 1 )

[sub_resource type="GradientTexture2D" id=4]
gradient = SubResource( 5 )
fill_from = Vector2( 0.5, 0 )
fill_to = Vector2( 0.620833, 1 )
repeat = 2

[node name="ItemCardSlot" type="TextureButton"]
margin_right = 821.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 3
size_flags_vertical = 0
toggle_mode = true
texture_normal = SubResource( 7 )
texture_pressed = SubResource( 11 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 3 )
expand = true
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 1

[node name="WeaponLevelUp" type="TextureRect" parent="MarginContainer"]
margin_right = 811.0
margin_bottom = 140.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 4 )
stretch_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/WeaponLevelUp"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/WeaponLevelUp/HBoxContainer"]
margin_right = 150.0
margin_bottom = 140.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3

[node name="WeaponIcon" type="TextureRect" parent="MarginContainer/WeaponLevelUp/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
texture = ExtResource( 1 )
stretch_mode = 6

[node name="ItemLevel" type="Label" parent="MarginContainer/WeaponLevelUp/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 104.0
margin_right = 150.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Level: 2"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/WeaponLevelUp/HBoxContainer"]
margin_left = 154.0
margin_right = 811.0
margin_bottom = 140.0
size_flags_horizontal = 3

[node name="ItemName" type="Label" parent="MarginContainer/WeaponLevelUp/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_right = 657.0
margin_bottom = 14.0
text = "Item: Big Bone of Coomalot"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/WeaponLevelUp/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 657.0
margin_bottom = 140.0
mouse_filter = 2
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ItemDescription" type="Label" parent="MarginContainer/WeaponLevelUp/HBoxContainer/VBoxContainer2/ScrollContainer"]
unique_name_in_owner = true
margin_right = 645.0
margin_bottom = 150.0
size_flags_horizontal = 3
text = "Description: From the dawn of time this bone stayed erected as pillar of hope for the bone church| Description: From the dawn of time this bone stayed erected as pillar of hope for the bone churchDescription: From the dawn of time this bone stayed erected as pillar of hope for the bone churchDescription: From the dawn of time this bone stayed erected as pillar of hope for the bone churchDescription: From the dawn of time this bone stayed erected as pillar of hope for the bone churchDescription: From the dawn of time this bone stayed erected as pillar of hope for the bone churchDescription: From the dawn of time this bone stayed erected as pillar of hope for the bone churchDescription: From the dawn of time this bone stayed erected as pillar of hope for the bone church"
autowrap = true
